# SSG

./: CMakeLists.txt
include/: index_ssg.h  util.h
src/: CMakeLists.txt  index_ssg.cpp  util.cpp
tests/: CMakeLists.txt  test_ssg_index.cpp  test_ssg_optimized_search.cpp
